# questoes-api

./: .gitignore  .replit  drive.py  gerador.py  gerador_arimetica.py  gerador_novo.py  main.py  main_completo.py  nomes.py  pdf.py  pdf_utils.py  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/: .latest.json
attached_assets/: Pasted--O-que-voc-vai-fazer-Objetivo-Sua-API-vai-enviar-o-PDF-gerado-diretamente-para-a-sua-conta-do-Go-1764582547057_1764582547057.txt  Pasted--RESUMO-DAS-INFORMA-ES-QUE-VOC-PASSOU-Nome-do-projeto-Banco-de-Quest-es-Matem-ticas-Arm-1764581797041_1764581797041.txt  Pasted-Perfeito-Vamos-criar-um-novo-endpoint-chamado-POST-gerar-volume-completo-Esse-endpoint-vai-D-1764590272338_1764590272338.txt  Pasted-Volume-1-Conjuntos-L-gica-e-Fun-es-B-sicas-800-quest-es-Defini-es-de-conjuntos-80-Opera-es-1764596401019_1764596401019.txt  Pasted-eu-quero-que-voc-me-envie-com-a-maior-variedade-poss-vel-papo-de-100-op-es-diferentes-por-se-o-Ac-1764595724833_1764595724833.txt
gerador/: __init__.py  algebra.py  analise.py  arimetica.py  combinatoria.py  complexos.py  espacial.py  geometria.py  polinomios.py  trigonometria.py
