[project]
name = "banco-questoes-api"
version = "1.0.0"
description = "API para geração automatizada de questões matemáticas"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "reportlab>=4.2.0",
    "pydantic>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
